# degenie

./: .env.example  ASSET_GENERATION_TEST.md  BACKEND_FIX_INSTRUCTIONS.md  BACKEND_PORT_SOLUTION.md  CHART_FIXES_SUMMARY.md  CHART_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  DEBUG_ASSET_GENERATION.md  DEVELOPMENT_WORKFLOW.md  FORCE_KILL_PORT.sh  FORCE_RESTART_BACKEND.md  KILL_PORT_4000.md  PHANTOM_FIX.md  PRODUCTION_TRADING_STATUS.md  RACE_CONDITION_FIX.md  README.md  REAL_TOKEN_DEPLOYMENT.md  RUN_SERVERS.md  TRADING_FIX_SUMMARY.md  clean-storage.js  debug-localstorage.js  fix-backend.sh  setup-real-deployment.sh  start-backend.sh
.taskmaster/: config.json  state.json
.taskmaster/reports/: task-complexity-report.json
docs/: README.md
scripts/: PRD.txt  automated_pr_workflow.sh  poll_ci.sh  review_coderabbit.sh
src/: README.md
src/backend/: .env.example  README.md  create-test-token.ts  generate-wallet.js  package-lock.json  package.json  server-wallet.json  test-api.js  test-auth.js  test-chart-simple.ts  test-chart.ts  test-functionality.js  test-insufficient-credits.js  test-meme.js  test-real-trades.js  test-results.md  test-sell-fix.ts  test-simple-trades.js  test-trades.js  test-trades.ts  tsconfig.json
src/contracts/solana/token-creator/: Cargo.toml
src/contracts/solana/token-creator/src/: lib.rs
src/contracts/solana/token-creator/tests/: bonding_curve_integration.rs  graduation_tests.rs  minting_tests.rs  spl_compliance.rs
src/frontend/: .gitignore  CHART_FIX_SUMMARY.md  CHART_V5_MIGRATION.md  README.md  RPC_SETUP.md  next.config.ts  (+4 more)
tests/: README.md
(+204 files in other folders)
