[package]
name = "degenie-token-creator"
version = "0.1.0"
description = "DeGenie AI-powered token creation smart contract for Solana"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "~1.18.0"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"
tokio = { version = "1.0", features = ["macros"] }