[package]
name = "degenie-token-creator"
version = "0.1.0"
description = "DeGenie AI-powered token creation smart contract for Solana"
edition = "2021"
license = "MIT"
license-file = "../../../LICENSE"
authors = ["DeGenie Team <team@degenie.ai>"]
repository = "https://github.com/adeavid/degenie"
homepage = "https://degenie.ai"
keywords = ["solana", "blockchain", "token", "defi", "ai"]
categories = ["cryptography::cryptocurrencies"]
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "~1.18.0"
mpl-token-metadata = "4.1.2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"
tokio = { version = "1.0", features = ["macros"] }